third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/spec/key-value-pair-1.stderr
TOML parse error at line 1, column 7
  |
1 | key = # INVALID
  |       ^
invalid string
expected `"`, `'`
